--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 /storage/*.key
 /storage
 /vendor
-!/services
+!/services/.env
+.env
 .env.backup
 .phpunit.result.cache
 docker-compose.override.yml
