--- a/services/.env
+++ b/services/.env
@@ -2,7 +2,7 @@ APP_NAME=Smartworld
 APP_ENV=development
 APP_KEY=base64:22y59Yg84YZHECkbOVnn5q7XK5dd4x4S3Nn3N/fSYvY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://smartworld.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
